--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=f8fda2cd9b6f14a0dbd17cefd2e15a30
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/GestionTaches?serverVersion=8&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
